# youtube-audio-downloader

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
backend/: Cargo.toml  tauri.conf.json
backend/capabilities/: default.json
backend/src/: main.rs
backend/src/commands/: dependencies.rs  download.rs  mod.rs
backend/src/models/: download_item.rs  mod.rs
backend/src/services/: dependency_checker.rs  downloader.rs  mod.rs  queue.rs
backend/src/utils/: mod.rs  validator.rs
docs/: backend-architecture.md  linux-dependencies.md
frontend/: index.html  main.js  styles.css
