[package]
name = "youtube-audio-downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
regex = "1.10"
url = "2.5"
once_cell = "1.19"
parking_lot = "0.12"
uuid = { version = "1.6", features = ["v4"] }
dirs = "5.0"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }
